--- a/tpl/macros.twig
+++ b/tpl/macros.twig
@@ -22,8 +22,8 @@
     // back button
     $( "#{{ name }}_back" ).click( function() {
       $slot = $( "#" + {{ slot }} + "_slot" );
-      if( "#main_slot" == $slot.selector ) slot_prev( {{ slot }} );
-      else $slot.dialog( "close" ); // assume we're in a popup dialog
+      if( undefined == $.cookie( "slot__" + {{ slot }} + "__prev" ) ) $slot.dialog( "close" );
+      else slot_prev( {{ slot }} );
     } );
   
     // create a button set
