Better warning text in password dialog

--- a/tpl/self_password.twig
+++ b/tpl/self_password.twig
@@ -59,9 +59,9 @@
         </td>
       </tr>
     </table>
-    <span class="ui-state-error-text">
+    <div class="ui-state-error">
       WARNING!  You must restart your session after changing your password.
-    </span>
+    </div>
     {% from 'macros.twig' import confirm_buttons %}
     {{ confirm_buttons( slot, widget.full, [ 'ok' ], false, 'right', true ) }}
   </div>
