--- a/tpl/base_main.twig
+++ b/tpl/base_main.twig
@@ -69,7 +69,8 @@
             height: 220,
             autoOpen: true,
             closeOnEscape: false,
-            open: function( event, ui ) { $( ".ui-dialog-titlebar-close", $(this).parent() ).hide(); }
+            open: function( event, ui ) { $( ".ui-dialog-titlebar-close", $(this).parent() ).hide(); },
+            beforeClose: function( event, ui ) { $(this).html( "" ); },
           } );
           slot_load( "password", "self", "password" );
 
