--- a/tpl/self_status.twig
+++ b/tpl/self_status.twig
@@ -22,6 +22,17 @@
       $( "#{{ widget.full }}_icons" ).children().tooltip();
       update_clock();
       setInterval( 'update_clock()', 60000 );
+
+      {% if home %}
+        $( "#{{ widget.full }}_home" ).button( {
+          text: false,
+          icons: {
+            primary: "ui-icon-home"
+          }
+        } ).click( function() {
+          slot_load( "main", "self", "home" );
+        } );
+      {% endif %}
     } );
   </script>
 
@@ -29,6 +40,7 @@
 
 {% block widget %}
 
+  {% if home %}<button id="{{ widget.full }}_home">home</button>{% endif %}
   <span id="{{ widget.full }}_icons" class="status_icons ui-widget ui-state-default ui-corner-all">
     <span id="{{ widget.full }}_clock" style="padding-left:0.25em" />
   </span>
