Making use of the new slot_prev_clip() javascript function

--- a/tpl/base_add_access.twig
+++ b/tpl/base_add_access.twig
@@ -81,7 +81,7 @@
                 $.cookie( "{{ widget.full }}_{{ access_child }}_list_checked_ids", null );
                 $.cookie( "{{ widget.full }}_role_list_checked_ids", null );
                 slot_refresh( "settings" ); // in case the current user has new access
-                slot_prev( {{ slot }} );
+                slot_prev_clip( {{ slot }} );
               }
             }
           );
