--- a/tpl/base_view.twig
+++ b/tpl/base_view.twig
@@ -39,7 +39,7 @@
               args.id = {{ id|default(0) }};
               if( ajax_push( "{{ widget.subject }}", "delete", args ) ) {
                 $slot = $( "#" + {{ slot }} + "_slot" );
-                if( "#main_slot" == $slot.selector ) slot_prev( {{ slot }} );
+                if( "#main_slot" == $slot.selector ) slot_prev_clip( {{ slot }} );
                 else $slot.dialog( "close" ); // assume we're in a popup dialog
               }
             }
