--- a/tpl/base_list.twig
+++ b/tpl/base_list.twig
@@ -298,12 +298,6 @@
         ] );
 
         $restrict_dialog.dialog( "open" );
-        $restrict_dialog.parent().keypress( function(e) {
-          if( ( e.which && e.which == 13 ) || ( e.keyCode && e.keyCode == 13 ) ) {
-            $(this).find( "button" ).eq(0).click();
-            return false;
-          }
-        } );
       } );
 
       $header_buttons_unrestrictable = $( "button.{{ widget.full }}_unrestrictable" );
@@ -349,6 +343,11 @@
         height: 150,
         width: 450,
         modal: true,
+      } ).parent().keypress( function(e) {
+        if( ( e.which && e.which == 13 ) || ( e.keyCode && e.keyCode == 13 ) ) {
+          $(this).find( "button" ).eq(0).click();
+          return false;
+        }
       } );
 
       {% if items_per_page < number_of_items %}
