--- a/tpl/base_add.twig
+++ b/tpl/base_add.twig
@@ -188,7 +188,7 @@
             </td>
           </tr>
           {% if not loop.last %}
-            <tr><td></td><td><hr class="ui-widget ui-widget-content"</td></tr>
+            <tr><td></td><td><hr class="ui-widget ui-widget-content"></td></tr>
           {% endif %}
 
         {% endif %}
