--- a/tpl/participant_multiedit.twig
+++ b/tpl/participant_multiedit.twig
@@ -126,7 +126,7 @@
                   style="width: 100%"
                   class="ui-state-default">
             <option value="-1">do not change</option>
-            {% for value_id, value in status_list %}
+            {% for value_id, value in state_list %}
               <option value="{{ value_id }}">{{ value }}</option>
             {% endfor %}
           </select>
