Fixing bug in participant multiedit template

--- a/tpl/participant_multiedit.twig
+++ b/tpl/participant_multiedit.twig
@@ -122,7 +122,7 @@
           <span class="title">Condition:</span>
         </td>
         <td class="content">
-          <select id="{{ widget.full }}__status"
+          <select id="{{ widget.full }}__state_id"
                   style="width: 100%"
                   class="ui-state-default">
             <option value="-1">do not change</option>
