Greatly improved performance of CSV report output type
- replaced internal library for generating CSV files with native code
- reports generation time no longer scales linearly with the number of rows

--- a/tpl/base_report.twig
+++ b/tpl/base_report.twig
@@ -59,6 +59,8 @@
           {% endfor %}
           </td></tr>
 
+        {% elseif 'separator' == param.type %}
+          <tr><td colspan="2"><hr class="ui-widget ui-widget-content"></td></tr>
         {% elseif 'hidden' != param.type %}
 
           <tr>
