Improving CSV reporting system and multi-participant operations
Greatly improved performance of CSV report output type
- replaced internal library for generating CSV files with native code
- reports generation time no longer scales linearly with the number of rows

Multi-participant operations can now take CSV files as input
- the first column of a csv file can be taken as UIDs in multi-participant operations
- designed so that the csv output from the participant report can be used as input

Adding new temporary file upload operation
- temporary files can be written to disk and used in future operations

--- a/tpl/participant_multinote.twig
+++ b/tpl/participant_multinote.twig
@@ -5,94 +5,4 @@
  # @author Patrick Emond <emondpd@mcmaster.ca>
  # @see widget.twig for parameters
  #}
-{% extends "widget.twig" %}
-
-{% block javascript %}
-
-  {{ parent() }}
-  <script type="text/javascript">
-    $( function () {
-      // update button
-      $( "#{{ widget.full }}__update" ).click( function () {
-        var args = new Object();
-        $( "#{{ widget.full }}_form :input" ).each( function() {
-          var id_string = $(this).attr( "id" );
-          var param_name = id_string.substring( id_string.lastIndexOf('__') + 2 );
-          if( "update" != param_name )
-            args[param_name] = "checkbox" == $(this).attr( "type" )
-                             ? ( $(this).is( ":checked" ) ? 1 : 0 )
-                             : $(this).val();
-        } );
-
-        var data = ajax_pull( "participant", "multinote", args );
-        if( undefined != data ) {
-          var html = '<table style="width:34%; margin-left:33%; margin-right:33%">';
-          for( var key in data )
-          {
-            html += '<tr><td class="heading">' + key +
-                    '</td><td>' + data[key] +
-                    '</td></tr>';
-          }
-          html += '</table>' +
-                  '<div class="spacer" style="text-align: right">' +
-                  '<button id="{{ widget.full }}__proceed" style="width:120px">Proceed</button>' +
-                  '</div>';
-          $( "#{{ widget.full }}__results" ).html( html );
-          $( "#{{ widget.full }}__proceed" ).button();
-        }
-
-        $( "#{{ widget.full }}__proceed" ).click( function () {
-          var args = new Object();
-          $( "#{{ widget.full }}_form :input" ).each( function() {
-            var id_string = $(this).attr( "id" );
-            var param_name = id_string.substring( id_string.lastIndexOf('__') + 2 );
-            if( "update" != param_name )
-              args[param_name] = "checkbox" == $(this).attr( "type" )
-                               ? ( $(this).is( ":checked" ) ? 1 : 0 )
-                               : $(this).val();
-          } );
-          if( ajax_push( "participant", "multinote", args ) ) {
-            // let the user know the operation is complete and delete the proceed button
-            $(this).remove();
-            alert( "The operation was successful." );
-          }
-        } );
-      } );
-    } );
-  </script>
-
-{% endblock javascript %}
-
-{% block widget %}
-  <div id="{{ widget.full }}_form" class="ui-widget ui-widget-content app-widget-content">
-    <div class="spacer">
-      <p>
-        Provide a list of participant UIDs which you wish to add a note to.
-        UIDs must be separated by a comma or space and may be qualified by single
-        or double quotes (ie: A123456 B123456 C123456).
-      </p>
-    </div>
-    <table>
-      <tr>
-        <td class="heading">
-          <span class="title">Note:</span>
-        </td>
-        <td class="content">
-          <textarea id="{{ widget.full }}__note" style="height: 8em;"></textarea>
-        </td>
-      </tr>
-      <tr>
-        <td class="heading">
-          <span class="title">UID list:</span>
-        </td>
-        <td class="content">
-          <textarea id="{{ widget.full }}__uid_list" style="height: 16em;"></textarea>
-        </td>
-      </tr>
-    </table>
-    <div class="spacer" style="text-align: right">
-      <button id="{{ widget.full }}__update" style="width:120px">Update</button>
-    </div>
-    <div id="{{ widget.full }}__results"></div>
-  </div>
-{% endblock widget %}
+{% extends "base_participant_multi.twig" %}
