--- a/tpl/participant_site_reassign.twig
+++ b/tpl/participant_site_reassign.twig
@@ -5,7 +5,7 @@
  # @author Patrick Emond <emondpd@mcmaster.ca>
  # @see widget.twig for parameters
  #}
-{% extends "widget.twig" %}
+{% extends "base_participant_multi.twig" %}
 
 {% block javascript %}
 
@@ -21,52 +21,6 @@
       // populate the list on load
       populate_site_list( $( "#{{ widget.full }}__service_id" ).val() );
 
-      // update button
-      $( "#{{ widget.full }}__update" ).click( function () {
-        var args = new Object();
-        $( "#{{ widget.full }}_form :input" ).each( function() {
-          var id_string = $(this).attr( "id" );
-          var param_name = id_string.substring( id_string.lastIndexOf('__') + 2 );
-          if( "update" != param_name )
-            args[param_name] = "checkbox" == $(this).attr( "type" )
-                             ? ( $(this).is( ":checked" ) ? 1 : 0 )
-                             : $(this).val();
-        } );
-
-        var data = ajax_pull( "participant", "site_reassign", args );
-        if( undefined != data ) {
-          var html = '<table style="width:34%; margin-left:33%; margin-right:33%">';
-          for( var key in data )
-          {
-            html += '<tr><td class="heading">' + key +
-                    '</td><td>' + data[key] +
-                    '</td></tr>';
-          }
-          html += '</table>' +
-                  '<div class="spacer" style="text-align: right">' +
-                  '<button id="{{ widget.full }}__proceed" style="width:120px">Proceed</button>' +
-                  '</div>';
-          $( "#{{ widget.full }}__results" ).html( html );
-          $( "#{{ widget.full }}__proceed" ).button();
-        }
-
-        $( "#{{ widget.full }}__proceed" ).click( function () {
-          var args = new Object();
-          $( "#{{ widget.full }}_form :input" ).each( function() {
-            var id_string = $(this).attr( "id" );
-            var param_name = id_string.substring( id_string.lastIndexOf('__') + 2 );
-            if( "update" != param_name )
-              args[param_name] = "checkbox" == $(this).attr( "type" )
-                               ? ( $(this).is( ":checked" ) ? 1 : 0 )
-                               : $(this).val();
-          } );
-          if( ajax_push( "participant", "site_reassign", args ) ) {
-            // let the user know the operation is complete and delete the proceed button
-            $(this).remove();
-            alert( "The operation was successful." );
-          }
-        } );
-      } );
     } );
 
     // populate site drop-down with the selected service's sites
@@ -92,57 +46,3 @@
   </script>
 
 {% endblock javascript %}
-
-{% block widget %}
-  <div id="{{ widget.full }}_form" class="ui-widget ui-widget-content app-widget-content">
-    <div class="spacer">
-      <p>
-        Provide a list of participant UIDs which you wish to set the preferred site to.
-        UIDs must be separated by a comma or space and may be qualified by single
-        or double quotes (ie: A123456 B123456 C123456).
-      </p>
-    </div>
-    <table>
-      {% if 1 < services|length %}
-        <tr>
-          <td class="heading">
-            <span class="title">Service:</span>
-          </td>
-          <td class="content">
-             <select id="{{ widget.full }}__service_id" style="width: 100%" class="ui-state-default">
-              {% for service in services %}
-                <option value="{{ service.id }}">{{ service.name }}</option>
-              {% endfor %}
-             </select>
-          </td>
-        </tr>
-      {% else %}
-        {% for service in services %}
-          <input id="{{ widget.full }}__service_id" type="hidden" value="{{ service.id }}" />
-        {% endfor %}
-      {% endif %}
-      <tr>
-        <td class="heading">
-          <span class="title">Preferred Site:</span>
-        </td>
-        <td class="content">
-          <select id="{{ widget.full }}__site_id" style="width: 100%" class="ui-state-default">
-            <option value="0">None</option>
-          </select>
-        </td>
-      </tr>
-      <tr>
-        <td class="heading">
-          <span class="title">UID list:</span>
-        </td>
-        <td class="content">
-          <textarea id="{{ widget.full }}__uid_list" style="height: 16em;"></textarea>
-        </td>
-      </tr>
-    </table>
-    <div class="spacer" style="text-align: right">
-      <button id="{{ widget.full }}__update" style="width:120px">Update</button>
-    </div>
-    <div id="{{ widget.full }}__results"></div>
-  </div>
-{% endblock widget %}
