--- a/tpl/self_shortcuts.twig
+++ b/tpl/self_shortcuts.twig
@@ -14,7 +14,7 @@
     $( function() {
       // make button icons
       {% if calculator %}
-        $( "#{{ widget.full }}_calculator" ).button( {
+        $( "#{{ widget.full }}__calculator" ).button( {
           text: false,
           icons: {
             primary: "ui-icon-calculator"
@@ -33,7 +33,7 @@
       {% endif %}
       
       {% if timezone_calculator %}
-        $( "#{{ widget.full }}_timezone_calculator" ).button( {
+        $( "#{{ widget.full }}__timezone_calculator" ).button( {
           text: false,
           icons: {
             primary: "ui-icon-contact"
@@ -52,14 +52,14 @@
       {% endif %}
       
       {% if navigation %}
-        $( "#{{ widget.full }}_prev" ).button( {
+        $( "#{{ widget.full }}__prev" ).button( {
           text: false,
           icons: {
             primary: "ui-icon-arrowthick-1-w" }
         } ).click( function() {
           slot_prev( "main" );
         } );
-        $( "#{{ widget.full }}_next" ).button( {
+        $( "#{{ widget.full }}__next" ).button( {
           text: false,
           icons: {
             primary: "ui-icon-arrowthick-1-e"
@@ -70,7 +70,7 @@
       {% endif %}
       
       {% if home %}
-        $( "#{{ widget.full }}_home" ).button( {
+        $( "#{{ widget.full }}__home" ).button( {
           text: false,
           icons: {
             primary: "ui-icon-home"
@@ -80,7 +80,7 @@
         } );
       {% endif %}
 
-      $( "#{{ widget.full }}_font_down" ).button( {
+      $( "#{{ widget.full }}__font_down" ).button( {
         text: false,
         icons: {
           primary: "ui-icon-minus"
@@ -88,7 +88,7 @@
       } ).click( function() {
       } ).fontscale( "body", "down" );
 
-      $( "#{{ widget.full }}_font_up" ).button( {
+      $( "#{{ widget.full }}__font_up" ).button( {
         text: false,
         icons: {
           primary: "ui-icon-plus"
@@ -106,22 +106,22 @@
   <span>
     <span>
       {% if calculator %}
-        <button id="{{ widget.full }}_calculator">calculator</button>
+        <button id="{{ widget.full }}__calculator">calculator</button>
       {% endif %}
       {% if timezone_calculator %}
-        <button id="{{ widget.full }}_timezone_calculator">timezone calculator</button>
+        <button id="{{ widget.full }}__timezone_calculator">timezone calculator</button>
       {% endif %}
     </span>
     {% if navigation %}
       <span>
-        <button id="{{ widget.full }}_prev">back</button>
-        <button id="{{ widget.full }}_next">forward</button>
+        <button id="{{ widget.full }}__prev">back</button>
+        <button id="{{ widget.full }}__next">forward</button>
       </span>
     {% endif %}
-    {% if home %}<button id="{{ widget.full }}_home">home</button>{% endif %}
+    {% if home %}<button id="{{ widget.full }}__home">home</button>{% endif %}
     <span>
-      <button id="{{ widget.full }}_font_down">smaller font</button>
-      <button id="{{ widget.full }}_font_up">larger font</button>
+      <button id="{{ widget.full }}__font_down">smaller font</button>
+      <button id="{{ widget.full }}__font_up">larger font</button>
     </span>
     {% block shortcuts %}{% endblock %}
   </span>
