--- a/web/css/main.css
+++ b/web/css/main.css
@@ -30,7 +30,7 @@ html, body {
   cursor: pointer;
 }
 
-.extruder.top .content {
+.extruder.top .extruder-content {
   display: none;
   border-radius: 0 0 4px 4px;
   box-shadow: black 2px 2px 5px;
@@ -66,7 +66,7 @@ html, body {
   cursor: pointer;
 }
 
-.extruder.left .content {
+.extruder.left .extruder-content {
   display: none;
   box-shadow: black 2px 0px 5px;
 }
@@ -74,19 +74,6 @@ html, body {
 .extruder.left .text {
   font: 14px Arial, Helvetica, sans-serif;
   padding: 10px;
-}
-
-#tooltip {
-  position: absolute;
-  z-index: 3000;
-  padding: 5px;
-  opacity: 1.0;
-  border-radius: 5px;
-  box-shadow: black 2px 2px 5px;
-}
-
-#tooltip h3, #tooltip div {
-  margin: 0;
 }
 
 ins.no_icon {
@@ -247,9 +234,8 @@ span.status_icons {
 .ui-timepicker-div td { font-size: 90%; }
 #ui-datepicker-div { z-index: 2000 !important; }
 
-/* override a few things in the jquery ui theme */
-.ui-button-text-only .ui-button-text { padding: .1em 1em; }
-.ui-button-icon-only .ui-button-text, .ui-button-icons-only .ui-button-text { padding: .1em; text-indent: -9999999px; }
-.ui-button-text-icon-primary .ui-button-text, .ui-button-text-icons .ui-button-text { padding: .1em 1em .1em 2.1em; }
-.ui-button-text-icon-secondary .ui-button-text, .ui-button-text-icons .ui-button-text { padding: .1em 2.1em .1em 1em; }
-.ui-button-text-icons .ui-button-text { padding-left: 2.1em; padding-right: 2.1em; }
+/* override a few things in the jquery ui theme (buttons are too big) */
+.ui-widget { font-size: 1.0em; }
+
+/* override a few things in the timepicker plugin (layout is bad) */
+.ui-datepicker-buttonpane { margin-top: 2.5em !important; }
