--- a/tpl/base_list.twig
+++ b/tpl/base_list.twig
@@ -345,7 +345,10 @@
         modal: true,
       } ).parent().keypress( function(e) {
         if( ( e.which && e.which == 13 ) || ( e.keyCode && e.keyCode == 13 ) ) {
-          $(this).find( "button" ).eq(0).click();
+          // find the Ok button and click it
+          $(this).find( "button" ).each( function () {
+            if( "Ok" == $(this).find('span').html() ) $(this).click();
+          } );
           return false;
         }
       } );
