--- a/tpl/base_main.twig
+++ b/tpl/base_main.twig
@@ -26,10 +26,6 @@
         color: {{ FOREGROUND_COLOR }};
         background: {{ BACKGROUND_COLOR }};
       }
-      #tooltip {
-        color: {{ BACKGROUND_COLOR }};
-        background: {{ FOREGROUND_COLOR }};
-      }
       #main_slot {
         margin-left: {{ show_menu ? 35 : 10 }}px;
         margin-top: {{ show_status or show_shortcuts or show_settings ? 0 : 10 }}px;
@@ -82,6 +78,7 @@
             position: "top",
             positionFixed: true,
             width: 500,
+            extruderOpacity: 1,
             sensibility: 500,
             extruderOpacity: 1,
             autoCloseTime: 0,
@@ -98,6 +95,7 @@
             position: "left",
             positionFixed: true,
             width: 240,
+            extruderOpacity: 1,
             sensibility: 500,
             extruderOpacity: 1,
             autoCloseTime: 0,
@@ -116,7 +114,7 @@
         slot_refresh( "main" );
 
         // apply jquery-ui theme to the extruders
-        $( "div.content" ).addClass( "ui-widget-content" );
+        $( "div.extruder-content" ).addClass( "ui-widget-content" );
         $( ".flap" ).addClass( "ui-widget-header" );
         $( ".tooltop" ).addClass( "ui-widget ui-widget-content ui-state-default ui-corner-all" );
 
@@ -134,6 +132,7 @@
 
         // and run it again every time you scroll
         $(window).scroll(function() { sticky_header(); });
+
       } );
     </script>
   {% endblock javascript %}
