--- a/tpl/base_report.twig
+++ b/tpl/base_report.twig
@@ -17,9 +17,9 @@
         // push the form information
         var args = new Object();
         $( "#{{ widget.full }}_download_form :input" ).each( function() {
-          var id_string = $(this).attr( "id" );
+          var id_string = $(this).prop( "id" );
           var param_name = id_string.substring( id_string.lastIndexOf('__') + 2 );
-          args[param_name] = "checkbox" == $(this).attr( "type" )
+          args[param_name] = "checkbox" == $(this).prop( "type" )
                            ? ( $(this).is( ":checked" ) ? 1 : 0 )
                            : $(this).val();
         } );
