--- a/tpl/widget.twig
+++ b/tpl/widget.twig
@@ -31,7 +31,7 @@
   $( function() {
     update_shortcuts();
     $( "button, input:submit" ).button();
-    var slot_id = $( "#{{ widget.compound }}_slot_id" ).parents( "div[id$='_slot']" ).attr( "id" );
+    var slot_id = $( "#{{ widget.compound }}_slot_id" ).parents( "div[id$='_slot']" ).prop( "id" );
     {{ slot }} = slot_id.substring( 0, slot_id.lastIndexOf( "_" ) );
   } );
 </script>
