--- a/tpl/address_view.twig
+++ b/tpl/address_view.twig
@@ -15,8 +15,8 @@
 
       // month checkbox changed
       $( "[id^='{{ widget.full }}__']:checkbox" ).change( function () {
-        var month = $(this).attr( "name" );
-        var checked = $(this).attr( "checked" ) ? 1 : 0;
+        var month = $(this).prop( "name" );
+        var checked = $(this).prop( "checked" ) ? 1 : 0;
         var args = new Object();
         args.id = {{ id }};
         var columns = new Object();
