--- a/tpl/base_add.twig
+++ b/tpl/base_add.twig
@@ -17,9 +17,9 @@
         var args = new Object();
         var columns = new Object();
         $( "#{{ widget.full }}_add_form :input" ).each( function() {
-          var id_string = $(this).attr( "id" );
+          var id_string = $(this).prop( "id" );
           var column_name = id_string.substring( id_string.lastIndexOf('__') + 2 );
-          columns[column_name] = "checkbox" == $(this).attr( "type" )
+          columns[column_name] = "checkbox" == $(this).prop( "type" )
                                ? ( $(this).is( ":checked" ) ? 1 : 0 )
                                : $(this).val();
         } );
