--- a/tpl/base_add_access.twig
+++ b/tpl/base_add_access.twig
@@ -20,7 +20,7 @@
           // get the list of checked children from the cookies
           var json_checked_child_ids =
             $.cookie( "{{ widget.full }}_{{ access_child }}_list_checked_ids" );
-          var checked_child_ids = undefined == json_checked_child_ids
+          var checked_child_ids = "null" == json_checked_child_ids
                                ? new Object()
                                : jQuery.parseJSON( json_checked_child_ids );
           
@@ -32,7 +32,7 @@
         // get the list of checked roles from the cookies
         var json_checked_role_ids =
           $.cookie( "{{ widget.full }}_role_list_checked_ids" );
-        var checked_role_ids = undefined == json_checked_role_ids
+        var checked_role_ids = "null" == json_checked_role_ids
                              ? new Object()
                              : jQuery.parseJSON( json_checked_role_ids );
     
