--- a/tpl/base_list.twig
+++ b/tpl/base_list.twig
@@ -72,7 +72,7 @@
       
         // set the correct colspan in the table's footer
         var colspan = $( ".{{ widget.compound }}_table > thead > tr > th" ).length;
-        $( "#{{ widget.compound }}_footer_cell" ).attr( "colspan", colspan - 1 );
+        $( "#{{ widget.compound }}_footer_cell" ).prop( "colspan", colspan - 1 );
       {% endif %}
 
       // highlight the row the mouse is over
@@ -86,7 +86,7 @@
       {% if viewable %}
         // view buttons
         $( ".{{ widget.full }}_view" ).click( function() {
-          var id_string = $(this).attr( 'id' );
+          var id_string = $(this).prop( 'id' );
           var id = parseInt( id_string.substring( id_string.lastIndexOf('_') + 1 ) );
           slot_load( {{ slot }}, "{{ widget.subject }}", "view", { "id": id } );
         } );
@@ -95,7 +95,7 @@
       {% if removable %}
         // remove buttons
         $( ".{{ widget.full }}_remove" ).click( function() {
-          var id_string = $(this).attr( 'id' );
+          var id_string = $(this).prop( 'id' );
           var id = parseInt( id_string.substring( id_string.lastIndexOf('_') + 1 ) );
           
           {% if parent.exists %}
@@ -143,28 +143,28 @@
       {% if checkable %}
         // get the checked id object from the cookies
         var json_checked_ids = $.cookie( "{{ widget.compound }}_checked_ids" );
-        var checked_ids = undefined == json_checked_ids
+        var checked_ids = "null" == json_checked_ids
                         ? new Object()
                         : jQuery.parseJSON( json_checked_ids );
           
         // on page load, set check button states based on its cookie
         $( ".{{ widget.full }}_check" ).each( function() {
-          if( checked_ids[ $(this).attr( "id" ) ] ) $(this).attr( "checked", "checked" );
+          if( checked_ids[ $(this).prop( "id" ) ] ) $(this).prop( "checked", "checked" );
         } );
       
         // on change to a checkbox, set check button cookie
         $( ".{{ widget.full }}_check" ).change( function() {
           // add or remove the checkbox id to the object and replace the old cookie
-          if( $(this).attr( "checked" ) ) checked_ids[ $(this).attr( "id" ) ] = true;
-          else delete checked_ids[ $(this).attr( "id" ) ];
+          if( $(this).prop( "checked" ) ) checked_ids[ $(this).prop( "id" ) ] = true;
+          else delete checked_ids[ $(this).prop( "id" ) ];
           $.cookie( "{{ widget.compound }}_checked_ids", JSON.stringify( checked_ids ) );
         } );
       
         // on clicking the "check all" button, check all (visible) checkboxes and set their cookies
         $( "#{{ widget.full }}_check_all" ).click( function() {
           $( ".{{ widget.full }}_check" ).each( function() {
-            $(this).attr( "checked", true );
-            checked_ids[ $(this).attr( "id" ) ] = true;
+            $(this).prop( "checked", true );
+            checked_ids[ $(this).prop( "id" ) ] = true;
           } );
       
           // replace the old cookie
@@ -174,8 +174,8 @@
         // uncheck all (visible) checkboxes and set their cookies as well
         $( "#{{ widget.full }}_check_none" ).click( function() {
           $( ".{{ widget.full }}_check" ).each( function() {
-            $(this).attr( "checked", false );
-            delete checked_ids[ $(this).attr( "id" ) ];
+            $(this).prop( "checked", false );
+            delete checked_ids[ $(this).prop( "id" ) ];
           } );
           
           // replace the old cookie
@@ -185,10 +185,10 @@
         // uncheck all (visible) checkboxes and set their cookies as well
         $( "#{{ widget.full }}_check_invert" ).click( function() {
           $( ".{{ widget.full }}_check" ).each( function() {
-            var old = $(this).attr( "checked" );
-            $(this).attr( "checked", !old );
-            if( !old ) checked_ids[ $(this).attr( "id" ) ] = true;
-            else delete checked_ids[ $(this).attr( "id" ) ];
+            var old = $(this).prop( "checked" );
+            $(this).prop( "checked", !old );
+            if( !old ) checked_ids[ $(this).prop( "id" ) ] = true;
+            else delete checked_ids[ $(this).prop( "id" ) ];
           } );
       
           // replace the old cookie
@@ -198,7 +198,7 @@
         // clear out all checked items (visible or not)
         $( "#{{ widget.full }}_check_clear" ).click( function() {
           $( ".{{ widget.full }}_check" ).each( function() {
-            $(this).attr( "checked", false );
+            $(this).prop( "checked", false );
           } );
       
           // reset the checked ids cookie
@@ -223,7 +223,7 @@
             "restrict the list instead.</p>"
           );
         {% else %}
-          var sort_column = $(this).parent( "th" ).attr("id");
+          var sort_column = $(this).parent( "th" ).prop("id");
           var args = new Object();
           {% if parent.exists %}
             {% if parent.id|default(false) %}
@@ -247,7 +247,7 @@
     
       // right-clicking a restrictable header button adds a new restriction
       $header_buttons_restrictable.rightClick( function( event ) {
-        var column = $(this).parent( "th" ).attr( "id" );
+        var column = $(this).parent( "th" ).prop( "id" );
         var column_name = $(this).button().text();
         
         $restrict_dialog = $( "#{{ widget.compound }}__restrict_dialog" );
@@ -316,7 +316,7 @@
         // create the restrictions array
         var restrictions = new Object();
         {% for id, restrict in restrictions %}
-          var column = $(this).parent( "th" ).attr( "id" );
+          var column = $(this).parent( "th" ).prop( "id" );
           restrictions["{{ id }}"] = {
             compare: "{{ id }}" == column ? "" : "{{ restrict.compare }}",
             value: "{{ id }}" == column ? "" : "{{ restrict.value|e('js') }}"
