--- a/tpl/self_calculator.twig
+++ b/tpl/self_calculator.twig
@@ -24,8 +24,8 @@
       var $widget = $( "#{{ widget.full }}_widget" );
       var $display = $widget.find( "input" );
       $widget.find( "button" ).click( function() {
-        var id = $(this).attr( "id" );
-        var current_value = $display.attr( "value" );
+        var id = $(this).prop( "id" );
+        var current_value = $display.prop( "value" );
 
         if( id.match( /[0-9.]/ ) ) {
           // number or period
@@ -37,10 +37,10 @@
                           : "0" == current_value
                           ? id
                           : current_value + id;
-            $display.attr( "value", new_value );
+            $display.prop( "value", new_value );
           } else {
             // second number
-            $display.attr( "value", id );
+            $display.prop( "value", id );
           }
         }
         else {
@@ -50,11 +50,11 @@
             var new_value = 1 == current_value.length
                           ? "0"
                           : current_value.substring( 0, current_value.length - 1 );
-            $display.attr( "value", new_value );
+            $display.prop( "value", new_value );
           }
           else if( "CE" == id ) {
             // clear everything, start over
-            $display.attr( "value", "0" );
+            $display.prop( "value", "0" );
             stored_number = null;
             stored_operation = null;
           }
@@ -62,14 +62,14 @@
             if( undefined != stored_number && undefined != stored_operation ) {
               current_value = calculate( stored_number, stored_operation, current_value );
             }
-            $display.attr( "value", current_value + id );
+            $display.prop( "value", current_value + id );
             stored_number = current_value;
             stored_operation = id;
           }
           else if( "=" == id ) {
             if( undefined != stored_number && undefined != stored_operation ) {
               var new_value = calculate( stored_number, stored_operation, current_value );
-              $display.attr( "value", new_value );
+              $display.prop( "value", new_value );
               stored_operation = null;
             }
           }
