--- a/tpl/base_add_list.twig
+++ b/tpl/base_add_list.twig
@@ -16,7 +16,9 @@
         var json_checked_ids =
           $.cookie( "{{ widget.full }}_{{ list_widget_name }}_checked_ids" );
         console.log( json_checked_ids );
-        var checked_ids = "null" == json_checked_ids
+        var checked_ids = undefined == json_checked_ids ||
+                          null == json_checked_ids ||
+                          "null" == json_checked_ids
                         ? new Object()
                         : jQuery.parseJSON( json_checked_ids );
         
